<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pozadinska"
    android:backgroundTint="@color/pozadinska"
    tools:context="ba.etf.rma23.projekat.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:backgroundTint="@color/pozadinska"
        android:background="@color/pozadinska"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/bottom_nav"
        app:defaultNavHost="true"
        android:layout_marginBottom="50dp"
        app:navGraph="@navigation/navgraph"
        tools:layout = "@layout/home_fragment"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/pozadinska"
        android:backgroundTint="@color/pozadinska"
        app:itemTextColor="@color/navigation_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment"
        app:menu="@menu/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>